<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rootDBl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocalDBActivity">

    <LinearLayout
        android:id="@+id/layout_nameGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/graphSelected" />

        <EditText
            android:id="@+id/input_nameGraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ctrlDBl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rbgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_undirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/undirectGraph" />

            <RadioButton
                android:id="@+id/rb_direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/directGraph" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_createGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_createGraph"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCreateGraph"
                android:text="@string/createGraph" />

            <Button
                android:id="@+id/btn_copyGraph"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCopyGraph"
                android:text="@string/copyGraph" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_savingGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_saveGraph"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSaveGraph"
                android:text="@string/saveGraph"
                android:textSize = "13sp"/>

            <Button
                android:id="@+id/btn_loadGraph"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onLoadGraph"
                android:text="@string/loadGraph"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_renameGraph"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRenameGraph"
                android:text="@string/renameGraph"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_deleteGraph"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDeleteGraph"
            android:text="@string/deleteGraph" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_graphsDBl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>